[6.0.x] Fixed #36920 -- Fixed alignment of fieldset legends in wide admin forms.
Visual regression in 4187da258fe212d494cb578a0bc2b52c4979ab95.

Backport of 8d251b512bafd7b7f736cfcabeba0ae76106f2db from main.

--- a/django/contrib/admin/static/admin/css/forms.css
+++ b/django/contrib/admin/static/admin/css/forms.css
@@ -217,7 +217,8 @@ fieldset .fieldBox {
 
 /* WIDE FIELDSETS */
 
-.wide label {
+.wide label,
+.wide legend {
     width: 200px;
 }
 
